<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:src="@mipmap/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">




        <Component.MyFontEdittextView
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/user_ico"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/Resturent_Title"
            android:padding="10dp"
            android:textSize="14dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_black"
            android:visibility="visible" />


        <Component.MyFontEdittextView
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/user_ico"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14dp"
            android:textColor="@color/color_text_black"
            android:visibility="visible" />


        <Component.MyFontEdittextView
            android:id="@+id/etmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/phone_icon"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/text_mobile"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_black"
            android:textSize="14dp"
            android:visibility="visible" />


        <Component.MyFontEdittextView
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/color_text_black"
            android:textSize="14dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/password_ico"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />


        <Component.MyFontEdittextView
            android:id="@+id/etComfirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/password_ico"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/text_comfirm_pass"

            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_black"
            android:textSize="14dp"
            android:visibility="visible" />

        <Component.MyFontEdittextView
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@mipmap/city"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/Location"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_black"
            android:textSize="14dp"
            android:visibility="visible" />

        <Component.MyFontEdittextView
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/bg_edittext"
            android:drawableLeft="@drawable/restaurent_location"
            android:drawablePadding="14dp"
            android:ems="10"

            android:hint="@string/City"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_black"
            android:textSize="14dp"
            android:visibility="gone" />

    </LinearLayout>


    <Component.MyFontButton
        android:id="@+id/btn_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:inputType="textCapCharacters"
        android:layout_toLeftOf="@+id/imageButton2"
        android:background="@drawable/roundcorner"
        android:gravity="center"
        android:text="@string/text_sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2sp">

        <Component.MyFontTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already an account? "
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <Component.MyAppTitleFontTextView
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_sign"
            android:textColor="@color/sing_up_here"
            android:textSize="14dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/ib_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/fb_btn_bg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textSize="@dimen/activity_text_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/ib_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/gmail_btn_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:background="@mipmap/login_bottom_bg" />
    </LinearLayout>

</LinearLayout>