<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/Layout_lin"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@color/order_profile_bg"
        android:orientation="horizontal"
        android:weightSum=".7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".6"
            android:orientation="vertical">

            <Component.MyAppTitleFontTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Johb Doe"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Component.MyTitleFontTextView
                android:id="@+id/tv_Fw_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FW Code: 100"
                android:textColor="@android:color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".01"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"></LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight=".3"
            android:orientation="vertical">

            <Component.MyAppTitleFontTextView
                android:id="@+id/tv_Balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Component.MyTitleFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Balance"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

    <Component.MyAppTitleFontTextView
        android:id="@+id/tv_your_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout_lin"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Your_Orders"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_your_orders">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:layout_weight="14.50" />



        </LinearLayout>





    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btn_Pay"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/tv_your_orders"
        android:layout_alignStart="@+id/tv_your_orders">



        <Component.MyAppTitleFontTextView
            android:id="@+id/tv_itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Total"
            android:layout_weight=".6"
            android:lines="1"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="13sp" />


        <Component.MyAppTitleFontTextView
            android:id="@+id/tv_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Rs. 35"
            android:layout_weight=".2"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

    </LinearLayout>

    <Component.MyFontButton
        android:id="@+id/btn_Pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/roundcorner"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/proceed_To_Pay"
        android:textColor="@android:color/white" />


</RelativeLayout>